--- a/package.json
+++ b/package.json
@@ -2,18 +2,28 @@
   "name": "coupon-scraping",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "npx ts-node src/index.ts",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
-    
-
-    "keywords": [],
-    "author": "Châu An Phú",
-    "license": "ISC",
-    "dependencies": {
-      "express": "^4.18.2"
-    }
+  "keywords": [],
+  "author": "Châu An Phú",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "axios": "^1.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.1",
+    "nodemon": "^3.0.1",
+    "prisma": "^5.6.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   }
+}
