--- a/backend/docker-compose.prod.yml
+++ b/backend/docker-compose.prod.yml
@@ -1,26 +1,28 @@
 version: '3'
 services:
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: coupon-scraping-app:latest
-    ports:
-      - 3000:80
+    image: coupon-scraping-app:1.0.0
+    container_name: coupon-scraping-app
     depends_on:
       - postgres
-    env_file:
-      - .env
     environment:
       - APP_PORT=80
+      - AUTH_SECRET=c29tZXRpbWViZWd1bnN5bGxhYmxlcG9ldGFzbGVlcHA=
       - DATABASE_URL=postgresql://user:password@postgres:5432/db?schema=public
+    networks:
+      - intra-domain
   postgres:
     image: postgres:16
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       POSTGRES_DB: db
-    ports:
-      - "5432:5432"
     volumes:
       - ./db:/var/lib/postgresql/data
+    networks:
+      - intra-domain
+networks:
+  intra-domain:
+    driver: bridge
+  nginx-network:
+    external: true
