--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,9 @@
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
+    "pretty": "^2.0.0",
+    "puppeteer": "^21.5.2",
+    "request-promise": "^4.2.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
