--- a/backend/package.json
+++ b/backend/package.json
@@ -15,17 +15,19 @@
     "@prisma/client": "^5.6.0",
     "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pretty": "^2.0.0",
-    "puppeteer": "^21.5.2",
-    "request-promise": "^4.2.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "pretty": "^2.0.0",
+    "puppeteer": "^21.5.2",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.17.10",
     "@types/jsonwebtoken": "^9.0.5",
