--- a/backend/Dockerfile.fe
+++ b/backend/Dockerfile.fe
@@ -1,21 +1,12 @@
 
-# Use the official Node.js image as the base image
-FROM node:14-alpine
+# Use a lightweight base image
+FROM nginx:alpine
 
-# Set the working directory inside the container
-WORKDIR /app
+# Copy the static files to the nginx html directory
+COPY dist /usr/share/nginx/html
 
-# Copy the package.json and package-lock.json files to the working directory
-COPY package*.json ./
+# Expose port 80
+EXPOSE 80
 
-# Install the dependencies
-RUN npm install --production
-
-# Copy the dist folder to the working directory
-COPY dist ./dist
-
-# Expose the port that your application listens on
-EXPOSE 3000
-
-# Start the application
-CMD ["node", "dist/index.js"]
+# Start the nginx server
+CMD ["nginx", "-g", "daemon off;"]
