--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.6.0",
-    "axios": "^1.6.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -24,7 +23,13 @@
     "passport-local": "^1.0.0",
     "pretty": "^2.0.0",
     "puppeteer": "^21.5.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
