--- a/backend/Dockerfile.fe
+++ b/backend/Dockerfile.fe
@@ -3,7 +3,7 @@
 FROM nginx:alpine
 
 # Copy the static files to the nginx html directory
-COPY dist /usr/share/nginx/html
+# COPY dist /usr/share/nginx/html
 
 # Expose port 80
 EXPOSE 80
